--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,8 +8,15 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-
+@media (min-width: 600px) {
+  .task-grip {
+    position: absolute;
+    left: -15px;
+    top: 9.0px;
+    color: rgb(255, 255, 255, 0.5);
+    transition: 500ms ease-in-out;
+    transition-delay: 1s;
+  }
 }
 
 .App-header {
@@ -79,14 +86,7 @@
 }
 
 /* General Page Styling */
-.bottom {
-  display: flex;
-  flex-direction: row;
-}
-.top {
-  display: flex;
-  justify-content: center;
-}
+
 .page-config {
   min-height: 100vh;
   height: 100%;
@@ -701,28 +701,31 @@ cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0rem .5rem 0rem .5rem;
 }
 
 .task-container {
   display: flex;
-  position: relative;
-  justify-content: center;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
-  width: 1050px;
+  position: relative;
+  width: 75%;
+  justify-content: center;
+  align-items: center;
 }
+
 .task-item {
   display: flex;
   flex-direction: column;
-  padding: 6px;
+  padding: 6px 12px 6px 6px;
   border: solid 0.5px var(--mid-gray);
   border-radius: 6px;
   box-shadow: var(--task-shadow);
   color: white;
   min-height: 50px;
-  min-width: 600px;
-  width: 1000px;
-  max-width: 1000px;
+  max-height: 500px;
+  min-width: 25%px;
+  width: 95%;
   background-color: var(--mid-gray2);
 }
 .task-element {
@@ -747,17 +750,13 @@ cursor: pointer;
 }
 .task-details {
   white-space: pre-wrap;
-  padding:4px 0px 4px 16px;
+  padding: 4px 0px 4px 16px;
 }
 
-/* I know what the problem is regarding the kinda jumpy transition delays on fast
-task hovering. I would need to specifiy all the exact transition-delays.
-Ideally there would only be a delay on first hover and after you leave it would
-just snap back into position. */
 
 .task-grip-invisible {
 position: absolute;
-left: 10px;
+left: 5px;
 top: 9.0px;
 z-index: -1;
 color: transparent;
@@ -771,6 +770,7 @@ color: transparent;
   transition: 500ms ease-in-out;
   transition-delay: 1s;
 }
+
 .task-grip:hover {
   position: absolute;
   color: var(--accent-green);
@@ -782,6 +782,7 @@ font-size: 1rem;
 display: flex;
 white-space: nowrap;
 }
+
 .invisible-icons {
   top: 0;
   left: 0;
@@ -867,7 +868,8 @@ flex-direction: row;
     width: 75%;
     height: 75%;
 }
-
+.table-blank {
+}
 .table-col {
   display: flex;
   flex-direction: column;
