--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -540,6 +540,18 @@ display: flex;
   width: 85%;
 }
 
+.top {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: .5rem 0rem 1rem 0rem;
+}
+
+.bottom {
+  display: flex;
+  flex-direction: row;
+  margin: .5rem 0rem 1rem 0rem;
+}
 .toolbar-container {
 display: flex;
 flex-direction: row;
@@ -861,6 +873,7 @@ flex-direction: row;
   }
 
 /* TimeBlock section  */
+
 .table {
     /* border: 1px solid black; */
     display: flex;
@@ -869,7 +882,10 @@ flex-direction: row;
     height: 75%;
 }
 .table-blank {
+
 }
+
+
 .table-col {
   display: flex;
   flex-direction: column;
