--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -356,7 +356,6 @@ border-radius: 15px;
   background-color: var(--mid-gray);
   color: white;
   border-radius: 20px;
-
 }
 .popup-close {
   margin-top: 10px;
@@ -414,11 +413,66 @@ justify-content: flex-start;
 .categories-item:hover {
   color: var(--accent-green);
 }
-.color-picker {
-position: relative;
+
+
+/* -------------------------- */
+
+/* MODAL STYLING */
+
+.modal-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0,0,0,0.7);
+  z-index: 1000;
+}
+
+.modal {
+  position: relative;
+  padding: 20px 10px 20px 20px;
+  width: 100%;
+  max-width: 370px;
+  height: 50%;
+  max-height: 460px;
+  background-color: var(--mid-gray);
+  color: white;
+  border-radius: 20px;
+}
+
+.nested-modal-background{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0,0,0,0.7);
+  z-index: 1002;
+}
+.nested-modal-timeblock {
+position: fixed;
+width: 100%;
+max-width: 380px;
+height: 25%;
+max-height: 240px;
+background-color: var(--mid-gray);
+display: flex;
+justify-content: center;
+align-items: center;
+border-radius: 20px;
+z-index: 1004;
+
 }
 
 /* -------------------------- */
+
 
 /* Side Bar styling */
 
