--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -57,11 +57,16 @@
   --accent2: #2574A9;
   --accent3: #006400;
 
+  --midnight-layer1: rgb(13, 15, 28);
+  --midnight-layer2: rgb(28, 30, 41);
+  --midnight-layer3: rgb(82, 85, 92);
+
   --login-welcome: rgb(45,204,116);
   --login-form: rgb(40,40,40);
   --button: rgb(52,180,135);
   --button-hover: rgb(36, 150, 110);
 
+  --panel-shadow: 2px 2px 6px 3px rgba(0,0,0,.6);
   --task-shadow: 0 0 5px rgba(0,0,0,.05), 2px 2px 5px rgba(0,0,0,.1);
   --popup-shadow: 0 0 5px rgba(0, 0, 0, 0.5), 2px 2px 5px rgba(0, 0, 0, 0.1);
   --font-gray: #8C979A;
@@ -185,6 +190,58 @@ font-size: 14px;
 .draggable {
   cursor: move;
   z-index: 101;
+}
+
+/* Sign Up Styling */
+.signup-panel {
+  display: flex;
+  flex-direction: column;
+  width: 420px;
+  height: 640px;
+  background: var(--midnight-layer1);
+  color: white;
+  align-self: center;
+  border-radius: 15px;
+  box-shadow: var(--panel-shadow);
+  }
+
+  .main-signup {
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: var(--midnight-layer2);
+  }
+
+.signup-element {
+  display: flex;
+  flex-direction: column;
+}
+.signup-item {
+display: flex;
+align-items: center;
+justify-content: center;
+padding: 2px;
+}
+.signup-label {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+
+}
+.form-input {
+  display: flex;
+  padding: 2px 4px 2px 4px;
+  width: 360px;
+  height: 28px;
+  margin: 5px;
+  border-radius: 10px;
+  outline:none;
+  font-size: 14px;
+  color: white;
+  background-color:rgba(0,0,0,0.2);
+  border-color: var(--midnight-layer3);
 }
 
 
@@ -908,7 +965,7 @@ cursor: pointer;
   background-color: var(--top-gray);
   border-radius: 5px;
   cursor: pointer;
-  color: var(--accent-green);
+  color: var(--primary-green);
 }
 .reminder {
   margin: 5px 10px 5px 10px;
