Added a UI for adding categories.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -819,8 +819,8 @@ cursor: pointer;
     content: 'Task Details...';
   }
 
-  .hover {
-    color: var(--highlight_color);
+  .hover:hover {
+    color: var(--primary-green);
   }
   
 
