--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -310,11 +310,13 @@ border-radius: 15px;
 
 .navbar-brand h2 {
   margin: 0;
+  cursor: pointer;
 }
 
 .navbar-logo {
   width: 3rem;
   height: 3rem;
+  cursor: pointer;
 }
 
 .navbar-start {
