--- a/frontend/src/Signup.css
+++ b/frontend/src/Signup.css
@@ -50,106 +50,99 @@
     border-color: var(--midnight-layer3);
   } */
 
+/* New Styling for Sign-up page */
+input[type="text"], input[type="email"], input[type="password"] {
+  background-color: var(--base-gray) !important;
+  color: white;
+}
 
-  /* New Styling for Sign-up page */
-  input:-webkit-autofill,
-  input:-webkit-autofill:hover, 
-  input:-webkit-autofill:focus, 
-  input:-webkit-autofill:active{
-      -webkit-box-shadow: 0 0 0px 1000px var(--midnight-layer1) inset !important;
-      color: white;
-  }
+.signup-main {
+  height: 100vh;
+  width: 100%;
+  background-color: var(--midnight-layer2);
+  z-index: 0;
+  position: absolute;
+}
 
+.pos-1 {
+  top: 10px;
+}
+.pos-2 {
+  position: relative;
+  margin-top: 3%;
+}
 
-  .signup-main{
-    height: 100vh;
-    width: 100%;
-    background-color: var(--midnight-layer2);
-    z-index: 0;
-    position: absolute;
-  }
+.signup-section {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
 
-  .pos-1{
-    top: 10px;
-  }
-  .pos-2{
-    position: relative;
-    margin-top: 3%;
-  }
+.signup-panel {
+  display: flex;
+  flex-direction: column;
+  width: 420px;
+  height: 640px;
+  background: var(--midnight-layer1);
+  color: white;
+  align-self: center;
+  border-radius: 15px;
+  box-shadow: var(--panel-shadow);
+}
 
-  .signup-section{
-    position: relative;
-    display: flex;
-    justify-content: center;
-  }
+.signup-inputgroup {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0rem 1rem 0rem;
+}
 
-  .signup-panel {
-    display: flex;
-    flex-direction: column;
-    width: 420px;
-    height: 640px;
-    background: var(--midnight-layer1);
-    color: white;
-    align-self: center;
-    border-radius: 15px;
-    box-shadow: var(--panel-shadow);
-  }
+.signup-element-1 {
+  display: flex;
+  flex-direction: row;
+  margin: 1rem 0.5rem 0rem 0.5rem;
+}
 
-  .signup-inputgroup{
-      display: flex;
-      flex-direction: column;
-      margin: 1rem 0rem 1rem 0rem;
-  }
+.signup-element-2 {
+  display: flex;
+  flex-direction: row;
+  margin: 0.25rem 2rem 0rem 2rem;
+  position: absolute;
+  z-index: 101;
+  transition: transform 300ms ease-out;
+}
 
-  .signup-element-1{
-    display: flex;
-    flex-direction: row;
-    margin: 1rem .5rem 0rem .5rem;
-  }
+.signup-element-2-hover {
+  display: flex;
+  flex-direction: row;
+  margin: 0.25rem 2rem 0rem 2rem;
+  position: absolute;
+  transition: transform 300ms ease-in-out;
+  transform: translateY(-1.5rem);
+}
 
-  .signup-element-2 {
-    display: flex;
-    flex-direction: row;
-    margin: .25rem 2rem 0rem 2rem;
-    position: absolute;
-    z-index: 101;
-    transition: transform 300ms ease-out;
-  }
+.signup-element-3 {
+  display: flex;
+  flex-direction: row;
+  margin: 0.25rem 2rem 0rem 2rem;
+}
 
-  .signup-element-2-hover {
-    display: flex;
-    flex-direction: row;
-    margin: .25rem 2rem 0rem 2rem;
-    position: absolute;
-    transition: transform 300ms ease-in-out;
-    transform: translateY(-1.5rem);
-  }
+.signup-item-1 {
+  color: var(--midnight-layer3);
+  margin: 0px 5px 0px 0px;
+}
 
-  .signup-element-3{
-    display: flex;
-    flex-direction: row;
-    margin: .25rem 2rem 0rem 2rem;
-  }
+.signup-item-2 {
+  position: relative;
+  width: 75%;
+  height: 1.5rem;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  border-bottom: solid 2px var(--midnight-layer3);
+  color: white;
+  z-index: 100;
+}
 
-  .signup-item-1{
-    color: var(--midnight-layer3);
-    margin: 0px 5px 0px 0px;
-  }
-
-  .signup-item-2{
-    position: relative;
-    width: 75%;
-    height: 1.5rem;
-    outline: none;
-    border: none;
-    background-color: transparent;
-    border-bottom: solid 2px var(--midnight-layer3);
-    color: white;
-    z-index: 100;
-  }
-
-  .signup-item-2:hover {
-      border-color: var(--primary-green);
-  }
-
-  
+.signup-item-2:hover {
+  border-color: var(--primary-green);
+}
