--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -15,7 +15,7 @@ html {
 }
 
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 4px;
   height: 8px;
   background: transparent;
 }
@@ -115,6 +115,7 @@ body,
   --bgrnd-green: #1b5c45;
   --accent-green: #74c4a8;
   --base-gray: rgb(31, 31, 31);
+  --base-gray2: rgb(25,25,25);
   --mid-gray: rgb(40, 40, 40);
   --mid-gray2: rgb(45, 45, 45);
   --top-gray: rgb(54, 54, 54);
@@ -601,7 +602,7 @@ cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.8);
   z-index: 1000;
 }
 
@@ -612,9 +613,9 @@ cursor: pointer;
   max-width: 250px;
   height: 50%;
   max-height: 400px;
-  background-color: var(--mid-gray);
+  background-color: var(--base-gray2);
   color: white;
-  border-radius: 20px;
+  border-radius: 10px;
   z-index: 1001;
 }
 .modal-container {
@@ -634,13 +635,16 @@ cursor: pointer;
   display: flex;
   font-weight: 300;
   position: relative;
+  background-color: rgb(0,0,0,0.5);
+  padding: 2px 8px;
+  border-radius: 5px;
 }
 .modal-group {
   width: 220px;
   height: 30px;
   padding-right: 20px;
   margin: 0px 10px 15px 0px;
-  background-color: rgb(0,0,0,0.5);
+  background-color: var(--mid-gray2);
   border-radius: 5px;
   box-shadow: 0px 1px 2px rgb(0,0,0,0.5);
 }
