--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -652,7 +652,7 @@ cursor: pointer;
   font-weight: 300;
   position: relative;
   /* background-color: rgb(0,0,0,0.5); */
-  padding: 2px 8px;
+  padding: 2px 8px 2px 0px ;
   border-radius: 5px;
 }
 .modal-group {
