--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -154,6 +154,11 @@ body,
   height: 100%;
   display: flex;
 }
+.flex-spacer-5 {
+  display: flex;
+  flex-grow: 5;
+  align-content: flex-start;
+}
 .flex-spacer-4 {
   display: flex;
   flex-grow: 4;
@@ -601,7 +606,7 @@ cursor: pointer;
 }
 
 .m-btn-sml{
-  width: 34px;
+  width: 38px;
   height: 20px;
 }
 .m-btn-lrg{
@@ -645,20 +650,23 @@ cursor: pointer;
   overflow-y: auto;
   overflow-x: hidden;
   max-height: 270px;
-
+}
+.modal-row-content {
+  min-width: 250px;
+  min-height: 265px;
+  align-items: flex-start;
 }
 .modal-header {
   display: flex;
   font-weight: 300;
   position: relative;
   /* background-color: rgb(0,0,0,0.5); */
-  padding: 2px 8px 2px 0px ;
+  padding: 2px 12px 2px 0px ;
   border-radius: 5px;
 }
 .modal-group {
-  width: 220px;
+  width: 240px;
   height: 30px;
-  padding-right: 20px;
   margin: 0px 10px 15px 0px;
   /* background-color: var(--mid-gray2); */
   border-radius: 5px;
@@ -678,8 +686,9 @@ cursor: pointer;
 .modal-item {
 display: flex;
 align-items: center;
-
+padding: 0px 6px 0px 0px;
 }
+
 
 .nested-modal-background {
   position: fixed;
@@ -706,6 +715,12 @@ align-items: center;
   border-radius: 20px;
   z-index: 1004;
 }
+
+
+/* Custom Classes for specific items in Modal(s) */
+.compact-picker{
+}
+
 
 /* -------------------------- */
 
