--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -35,7 +35,7 @@ body,
 #root,
 .App {
   display: flex;
-  flex: 1 0 auto;
+  flex: 1 1 auto;
 }
 
 .App {
@@ -762,6 +762,86 @@ border: transparent;
 
 /* -------------------------- */
 
+/* Landing Page Styling */
+
+.landing-page {
+  background-color: var(--midnight-layer1);
+}
+
+.landing-section{
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: center;
+}
+
+.landing-section1{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 180px 30px 30px 30px;
+}
+.landing-section2{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 120px 30px 30px 30px;
+  margin-top: 320px;
+}
+
+.landing-element{
+  color: white;
+}
+
+.landing-item{
+color: white;
+font-family: "Inter", sans-serif;
+font-weight: 300;
+font-size:  2rem;
+}
+.landing-taskpanel-header-pos{
+  position: relative;
+  transform: translateX(-200px) translateY(-150px);
+}
+.landing-item-F {
+color: var(--primary-green);
+font-family: "Inter", sans-serif;
+font-weight: 400;
+}
+.landing-item-T {
+font-family: "Inter", sans-serif;
+font-weight: 400;
+transform: translateX(150px);
+}
+.landing-item-taskpanel-text{
+  text-align: left;
+  padding: 50px 0px 0px 150px;
+  width: 350px;
+  font-weight: 300;
+  font-size: 1.75rem;
+  color: rgb(112,112,112);
+}
+.landing-logo{
+  width: 400px;
+  height: 400px;
+  cursor: pointer;
+}
+.landing-call2action{
+  font-family: "Inter", sans-serif;
+  font-size: 32px;
+  margin: 200px 0px 0px 0px;
+}
+.landing-btn-signup{
+  margin: 120px 0px 0px 0px;
+}
+.landing-tasks-image{
+  width: 500px;
+  height: 400px;
+  position: relative;
+  transform: translateX(100px) translateY(-75px);
+}
 /* Side Bar styling */
 .left-sidebar-sm {
   position: relative;
@@ -1316,7 +1396,6 @@ cursor: pointer;
 
 .table-blockz, .table-data, .table-header, .time-cell {
   border: 1px solid var(--top-gray2);
-  padding: 0.5rem;
   color: var(--text-gray1);
   border-collapse: collapse;
 }
@@ -1326,7 +1405,11 @@ cursor: pointer;
 }
 
 .table-data {
-  padding: 0.5rem;
+  height: 1px;
+}
+
+.table-data input {
+  display: flex;
 }
 
 .table-header {
@@ -1377,10 +1460,24 @@ cursor: pointer;
   color: var(--primary-green);
 }
 
+.time-cell {
+  padding: 5px 0px 5px 0px;
+}
+
 .cell {
+  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
+  align-items: flex-start;
+  color: white;
+}
+
+.cell-notediting {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: flex-start;
   color: white;
 }
@@ -1403,12 +1500,10 @@ cursor: pointer;
 
 .editable-cell {
   all: unset;
-  position: relative;
-  width: 100%;
-  height: 100%;
   outline: none;
+  flex-grow: 1;
+  width: 100%;
   margin: 0;
-  padding: 1px;
   vertical-align: middle;
   line-height: normal;
   font-size: 0.9rem;
@@ -1435,11 +1530,15 @@ cursor: pointer;
   padding: 0.3rem 0.5rem;
   transition: ease-in-out 0.2s;
   color: white;
+  background-color: inherit;
+  display: flex;
+  align-items: center;
 }
 
 .current-week {
   color: white;
   font-size: 1.5rem;
+  margin: 0.8rem 0 0;
 }
 
 .table-nav-btn:hover, .table-nav-today:hover {
@@ -1447,15 +1546,18 @@ cursor: pointer;
 }
 
 .draggable-div {
-  /* border-bottom: solid 1px yellow; */
-  position: relative;
   width: 100%;
   height: 5px;
-  color: transparent;
+  z-index: 1000;
 }
 .draggable-div:hover {
   cursor: n-resize;
   color: transparent;
+}
+
+
+.drag-listener {
+  position: absolute;
 }
 
 /* TimeBlock section  PRE Kanishq */
